force-app/main/default/objects/Program_Admitted__c/Program_Admitted__c.object-meta.xml
<CustomObject>
    <label>Program Admitted</label>
    <nameField>
        <displayFormat>PWCN-{0000}</displayFormat>
        <label>Program Wise Centre  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Admitted</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>