force-app/main/default/objects/Program_Admitted__c/fields/Backend_no__c.field-meta.xml
<CustomField>
    <fullName>Backend_no__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Backend no</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>