force-app/main/default/objects/Program_Admitted__c/fields/Centre__c.field-meta.xml
<CustomField>
    <fullName>Centre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centre</label>
    <referenceTo>Centre__c</referenceTo>
    <relationshipLabel>Program Admitted</relationshipLabel>
    <relationshipName>Program_Wise_Centres</relationshipName>
    <type>Lookup</type>
</CustomField>