force-app/main/default/objects/Program_Admitted__c/fields/Exam_Year__c.field-meta.xml
<CustomField>
    <fullName>Exam_Year__c</fullName>
    <label>Exam Year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>