force-app/main/default/objects/Program_Admitted__c/fields/LeadUpdateToClosedLost__c.field-meta.xml
<CustomField>
    <fullName>LeadUpdateToClosedLost__c</fullName>
    <formula>IF(Text(Stage__c)=&quot;Interested&quot; &amp;&amp; Aging__c &gt;= 18 , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadUpdateToClosedLost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>