force-app/main/default/objects/Program_Admitted__c/fields/LeadUpdateToEnrolled__c.field-meta.xml
<CustomField>
    <fullName>LeadUpdateToEnrolled__c</fullName>
    <formula>IF(Text(Stage__c)=&quot;Enrolled&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadUpdateToEnrolled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>