force-app/main/default/objects/Program_Admitted__c/fields/Product_Source__c.field-meta.xml
<CustomField>
    <fullName>Product_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Source</label>
    <referenceTo>Lead_Source__c</referenceTo>
    <relationshipLabel>Program Admitted</relationshipLabel>
    <relationshipName>Program_Admitted</relationshipName>
    <type>Lookup</type>
</CustomField>