force-app/main/default/objects/Program_Admitted__c/fields/Program_Admitted__c.field-meta.xml
<CustomField>
    <fullName>Program_Admitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Admitted</label>
    <type>Checkbox</type>
</CustomField>