force-app/main/default/objects/Program_Admitted__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
                <default>true</default>
                <label>Interested</label>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>