force-app/main/default/objects/Program_Admitted__c/fields/Student_Account__c.field-meta.xml
<CustomField>
    <fullName>Student_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Interested / Admitted</relationshipLabel>
    <relationshipName>Program_Wise_Centres</relationshipName>
    <type>Lookup</type>
</CustomField>