force-app/main/default/objects/Program_Admitted__c/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variant</label>
    <referenceTo>Variant__c</referenceTo>
    <relationshipLabel>Program Admitted</relationshipLabel>
    <relationshipName>Program_Admitted</relationshipName>
    <type>Lookup</type>
</CustomField>